# shell

./: CMakeLists.txt  README.md  git_cmd.sh  your_program.sh
include/: ast.h  builtins.h  completion.h  debug.h  executor.h  lexer.h  parser.h  utils.h
src/: ast.cpp  builtins.cpp  completion.cpp  executor.cpp  lexer.cpp  main.cpp  parser.cpp  utils.cpp
